[workspace]
members = [
    "programs/merkle-distributor",
    "programs/govern",
    "programs/smart-wallet",
    "programs/voter",
    "programs/gauge",
    "programs/quarry",
    "programs/minter",
    "programs/moc-amm",
    "cli/gauge",
    "cli/govern",
    "cli/merkle_distributor",
    "cli/minter",
    "cli/quarry",
    "cli/smartwallet",
    "cli/voter",
    "cli/moc_amm",
    "libs/*/"
]

[workspace.dependencies]
math = { path = "libs/math"}
solana-sdk = "1.6.20"
solana-program-test = "1.16.20"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anyhow = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
