[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
anchor-lang = { workspace = true}
anchor-spl = { workspace = true }
anyhow = { workspace = true }

